# ulcerative-colitis

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  README.md  calculate_mean_std.py  pyproject.toml
.gemini/: styleguide.md
analysis/: quality_control.ipynb
configs/: base.yaml  default.yaml  explain_neutrophils_mil.yaml  ml.yaml  paths.yaml  postprocessing.yaml  predict_embeddings.yaml  predict_mil.yaml  predict_nancy_low_mil.yaml  predict_neutrophils.yaml  predict_neutrophils_mil.yaml  preprocessing.yaml  quality_control.yaml  slide_embeddings.yaml  test_embeddings.yaml  test_mil.yaml  test_mil_final.yaml  test_nancy_high_mil.yaml  test_nancy_low_mil.yaml  test_neutrophils.yaml  test_neutrophils_mil.yaml  tile_embeddings.yaml  tile_masks.yaml  tiling.yaml  tissue_masks.yaml  train_embeddings.yaml  train_mil.yaml  train_mil_final.yaml  train_mil_old.yaml  train_nancy_high_mil.yaml  train_nancy_low.yaml  train_nancy_low_mil.yaml  train_nancy_low_slide_embeddings.yaml  train_nancy_mix_mil.yaml  train_neutrophils.yaml  train_neutrophils_mil.yaml  uris.yaml
configs/ml/: neutrophils.yaml  test.yaml  train.yaml
configs/postprocessing/: ensembling.yaml  markov_chain_confidence.yaml
configs/predictions/: ikem.yaml
configs/preprocessing/: create_dataset.yaml  embeddings.yaml  neutrophils.yaml  qualitty_control.yaml  quality_control.yaml  split_dataset.yaml  tile_masks.yaml  tiling.yaml  tissue_masks.yaml
ml/: __main__.py  base.py  classification.py  mil.py  neutrophils.py  ordered_regression.py  project_name_model.py  typing.py
ml/callbacks/: __init__.py  mlflow_prediction_callback.py
ml/data/: __init__.py  data_module.py
ml/loss/: __init__.py
ml/modeling/: __init__.py  classification_head.py  linear_probe.py  normalization.py  regression_head.py
postprocessing/: ensembling.py  markov_chain_confidence.py  nuclei_mask.py  occlusions.py  tissue_regions.py  utils.py
preprocessing/: __init__.py  calculate_mean_std.py  convert_embeddings.py  create_dataset.py  embeddings.py  generate_tissue_masks.py  labels_ftn.ipynb  labels_ikem.ipynb  labels_knl_patos.ipynb  neutrophils.py  paths.py  quality_control.py  retiling.py  slide_embeddings.py  slides.py  split_dataset.py  split_embeddings.py  tile_embeddings.py  tile_masks.py  tile_masks2.py  tiling.py  tissue_masks.py  tissue_regions.py  typing.py
reporting/: default.yaml
reporting/hydra/: default.yaml
reporting/mlflow/: base.yaml  kubas_cluster.yaml  kubas_external.yaml  local.yaml
scripts/ml/: neutrophils.py  test.py  train.py
scripts/postprocessing/: ensembling.py  markov_chain_confidence.py
scripts/preprocessing/: create_dataset.py  embeddings.py  neutrophils.py  quality_control.py  split_dataset.py  tile_masks.py  tiling.py  tissue_masks.py
ulcerative_colitis/: __main__.py  project_name_model.py  typing.py  ulcerative_colitis_attention_mil.py  ulcerative_colitis_attention_mil_multiclass.py  ulcerative_colitis_linear_probe.py  ulcerative_colitis_model.py  ulcerative_colitis_model_binary.py  ulcerative_colitis_model_multiclass.py  ulcerative_colitis_slide_embeddings.py
ulcerative_colitis/callbacks/: __init__.py  mask_builder_callback.py  mlflow_prediction_callback.py  occlusions.py
ulcerative_colitis/data/: __init__.py  data_module.py
ulcerative_colitis/loss/: __init__.py  attention_entropy_loss.py  cumulative_link_loss.py
ulcerative_colitis/metrics/: __init__.py  aggrageted_metric_collection.py  aggregate_metric.py  aggregated_metric_collection.py  aggregation.py  mean_aggregator.py  nested_metric_collection.py
ulcerative_colitis/modeling/: __init__.py  binary_classification_head.py  classification_head.py  normalization.py  ordinal_regression_head.py
(+493 files in other folders)
