[project]
name = "ulcerative-colitis"
version = "0.1.0"
authors = [{name = "Adam KukuÄka", email = "524905@muni.cz"}]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.4.0",
    "lightning>=2.4.0",
    "torchmetrics>=1.4.1",
    "torchvision>=0.17.2",
    "albumentations>=1.4.14",
    "ipykernel",
    "timm==1.0.20",
    "rationai-mlkit",
    "rationai-masks",
    "rationai-tiling",
    "openslide-python>=1.4.2",
    "openslide-bin>=4.0.0.8",
    "h5py>=3.14.0",
    "ipywidgets>=8.1.7",
    "click>=8.1.8",
    "shapely>=2.1.1",
    "histopath>=0.1.0",
    "openpyxl>=3.1.5",
    "ray==2.48.0",
    "ratiopath>=1.0.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.8",
]

[tool.uv.sources]
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git", branch = "fix/metrics" }
rationai-masks = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git" }
rationai-tiling = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git" }
