[project]
name = "ulcerative-colitis"
version = "0.1.0"
authors = [{name = "Adam KukuÄka", email = "adam.kukucka@mail.muni.cz"}]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.13.2",
    "lightning>=2.5.6",
    "mlflow<3.0.0",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyvips<3.1",
    "rationai-sdk",
    "rationai-mlkit",
    "rationai-masks",
    "rationai-tiling",
    "ray>=2.52.1",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "ratiopath>=1.1.1",
]

[dependency-groups]
dev = ["mypy", "ruff", "ipykernel"]
job = ["rationai-kube-jobs"]
report = ["report"]

[tool.uv.sources]
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git" }
rationai-masks = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git" }
rationai-tiling = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git" }
rationai-kube-jobs = { git = "ssh://git@gitlab.ics.muni.cz/rationai/infrastructure/kube-jobs" }
rationai-sdk = { git = "https://gitlab.ics.muni.cz/rationai/infrastructure/rationai-sdk-python.git" }
report = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/tools/report.git" }
